<resources>
    <string name="app_name">LibraryManagementSystem</string>
    <string name="signUp">Signup</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_account">Account</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_message">Can\'t connect to the server. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="user_type_prompt">Choose user type</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="user_type">User Type</string>
    <string name="user_program">User Program</string>
    <string name="user_number">User Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="unreturned_books">Unreturned Books</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string-array name="user_types">
        <item>Student</item>
        <item>Faculty</item>
        <item>Graduate School</item>
    </string-array>
    <string name="SERVER_IP">192.168.1.5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>

</resources>
