<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/outline_home_white_24dp"
        android:title="@string/nav_home"
        android:visible="true" />
    <item
        android:id="@+id/nav_search"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/outline_search_white_24dp"
        android:title="@string/nav_search"
        android:visible="true" />
    <item
        android:id="@+id/nav_account"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/outline_bookmarks_white_24dp"
        android:title="@string/nav_account"
        android:visible="true" />
</menu>