<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:src="@drawable/outline_cloud_off_white_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/no_connection"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/no_connection_message" />

                <Button
                    android:id="@+id/retryConnectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:background="@drawable/rounded_button_red"
                    android:text="@string/retry"
                    android:textColor="@color/colorWhite"

                    />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>