<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/back"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginBottom="50sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="83sp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:alpha="0.89">

        <LinearLayout
            android:layout_width= "match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:text="@string/login"
                android:textAlignment="center"
                android:layout_marginLeft="110dp"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:fontFamily="@font/stentiga"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLoginWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/alegreya"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLoginWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/alegreya"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37sp"
                android:background="@drawable/rounded_button_blue"
                android:fontFamily="@font/mono"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="15sp">

            </Button>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/signUpLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15sp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:layout_marginRight="5sp"
                        android:text="@string/new_user"
                        android:fontFamily="@font/ruda"
                        android:textColor="#000000"/>

                    <Button
                        android:id="@+id/goSignUpButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFFFF"
                        android:text="@string/signUp"
                        android:fontFamily="@font/coda"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <Button
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#FFFFFFFF"
                    android:text="Forgot Password?"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/coda"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>