<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/headerEditProfileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:fontFamily="@font/stentiga"
            android:textColor="@color/colorWhite"
            android:gravity="center"

            android:layout_margin="10sp"
            android:layout_marginBottom="0dp"
            android:textSize="30sp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/accountInfoEditProfileCardView"
            android:layout_below="@id/headerEditProfileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:elevation="10dp"
            android:layout_marginTop="50sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            app:contentPadding="15sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Account Information"
                    android:fontFamily="@font/mono"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userNameEditProfileWrapper"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:textSize="20sp"
                        android:id="@+id/userNameEditProfileEditText"
                        />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/userTypeEditProfileSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:entries="@array/user_types"
                    android:prompt="@string/user_type_prompt"
                    android:layout_marginBottom="10sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userNumberEditProfileWrapper"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="User Number"
                        android:textSize="20sp"
                        android:id="@+id/userNumberEditProfileEditText"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userProgramEditProfileWrapper"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Program"
                        android:textSize="20sp"
                        android:id="@+id/userProgramEditProfileEditText"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactNumberEditProfileWrapper"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contact Number"
                        android:textSize="20sp"
                        android:id="@+id/contactNumberEditProfileEditText"
                        />
                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <Button
                        android:background="@drawable/rounded_button_red"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/backEditProfileButton"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:layout_alignParentStart="true" />
                    <Button
                        android:background="@drawable/rounded_button_green"
                        android:layout_alignParentRight="true"
                        android:id="@+id/submitEditProfileButton"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </RelativeLayout>
</ScrollView>
