<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="@font/stentiga"/>

        <android.support.v7.widget.CardView
            android:id="@+id/signUpCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:background="@color/colorWhite"
            android:alpha="0.88"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailSignUpWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/emailSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:fontFamily="@font/alegreya"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userNumberSignUpWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    >

                    <EditText
                        android:id="@+id/userNumberSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="User Number"
                        android:inputType="text"
                        android:maxLength="30"
                        android:fontFamily="@font/alegreya"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordSignUpWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/passwordSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:fontFamily="@font/alegreya"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/retypePasswordSignUpWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/retypePasswordSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Re-type Password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:fontFamily="@font/alegreya"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/signUpSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/rounded_button_blue"
                    android:text="@string/signUp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:fontFamily="@font/stentiga"/>

                <Button
                    android:id="@+id/backSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/rounded_button_blue"
                    android:text="Back"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:fontFamily="@font/stentiga"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>